<resources>
    <string name="app_name">Prova1</string>
    <string name="titulo">Escolha a moeda que deseja converter</string>
    <string name="valor_a_ser_convertido">Preencha com o valor a ser convertido</string>
    <string name="dolar">Dólar</string>
    <string name="euro">Euro</string>
    <string name="rublo">Rublo</string>
    <string name="dirra">Dirrã</string>
    <string name="iene">Iene</string>
    <string name="rupia">Rupia</string>
    <string name="convert_dolar">Conversão em Dólar</string>
    <string name="convert_euro">Conversão em Euro</string>
    <string name="convert_rublo">Conversão em Rublo</string>
    <string name="convert_dirra">Conversão em Dirrã</string>
    <string name="convert_iene">Conversão em Iene</string>
    <string name="convert_rupia">Conversão em Rupia</string>
</resources>