<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:fontFamily="@font/manropeextrabold"
        android:textSize="20sp"
        android:textColor="@color/title_black"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="19dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/valor"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/background_radius"
        android:hint="@string/valor_a_ser_convertido"
        android:layout_marginHorizontal="25dp"
        android:paddingLeft="14.5dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/manroperegular"
        android:textSize="14sp"
        android:textColorHint="@color/input_grey"
        android:textColor="@color/input_grey"
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/dolar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/background_radius"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/eua"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dolar"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/manropebold"
                    android:textColor="@color/labels_black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/euro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/background_radius"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/euro"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/manropebold"
                    android:textColor="@color/labels_black"
                    android:textSize="14sp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/rublo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/background_radius"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rublo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rublo"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/manropebold"
                    android:textColor="@color/labels_black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dirra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/background_radius"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dirra"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dirra"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/manropebold"
                    android:textColor="@color/labels_black"
                    android:textSize="14sp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/iene"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/background_radius"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iene"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iene"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/manropebold"
                    android:textColor="@color/labels_black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rupia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/background_radius"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rupia"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rupia"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/manropebold"
                    android:textColor="@color/labels_black"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="@drawable/background_radius"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:id="@+id/textConversao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manropesemibold"
            android:textSize="14sp"
            android:textColor="@color/result_black"
            android:layout_marginLeft="52dp"/>

        <TextView
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manroperegular"
            android:textSize="14sp"
            android:textColor="@color/result_grey"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="1dp"/>
    </LinearLayout>

</LinearLayout>
<!--Code by: Daniel Felipe Alves Corrêa-->